I edit header section for mobile devices

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -18,6 +18,20 @@ title-color: hsl(12,12%,16%);
 text-color: hsl(12,12%,32%);
 text-color-light: hsl(12,8%,48%);
 white-color:#fff;
+
+*/
+/* Color
+ -first-color: #4A2D26;
+ first-color-alt:#2B1712;
+first-color-light: #65463E;
+second-color: #DDB66E;
+title-color:#2E2624;
+text-color: #5B4C48;
+text-color-light:#847571;
+white-color:#fff;
+
+
+
 */
 /* 
     Font and Typography 
@@ -58,8 +72,8 @@ img{
 
 /* Reusable Css Classes */
 .container{
-    max-width: 1120px;
-    margin-inline: 1.5rem;
+    /* max-width: 1120px; */
+    margin-inline: 1rem;
 
 }
 .grid{
@@ -95,22 +109,22 @@ img{
     z-index: 100;
     transition: background .4s, box-shadow .4s;
 }
-/* .header__border{
+ .header__border{
     /* border: 1px solid  white; */
-     /* width: 100%;
-     height: 2px;
+     width: 100%;
+     height: 2.5px;
      background-image:linear-gradient(90deg,hsl(12,8%,48%) 50%,transparent 50% ) ;
      background-size: 24px;
      position: absolute;
      bottom: 0;
      left: 0%;
-     transition: opacity 0.3s; */
+     transition: opacity 0.3s; 
 
-/* } */ 
+} 
 .nav{
     height:3.5rem ;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
 }
 .nav__logo{
@@ -149,6 +163,37 @@ img{
 }
 .nav__link:hover{
     color:hsl(39,62%,65%) ;
+}
+
+/*  HOME STYLE */
+.home{
+    margin-top: 20px;
+    background: url(../images/banner.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.home__container{
+    padding-top: 2rem;
+    row-gap: 2rem;
+    border: 2px solid  blue;
+    backdrop-filter: blur(4px);
+    z-index: -1;
+}
+.home__data{
+    border: 1px solid  skyblue;
+    text-align: center;
+}
+.home__title
+{
+    color: #d2c8c6;
+    border: 1px solid blue;
+    z-index: 88;
+    font-weight: 800;
+    font-size: 2rem;
+}
+.home__description{
+    color: #fff;
+    font-size: 1rem;
 }
 /* Navigation for mobile devices */
 
