--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -14,6 +14,12 @@
     src: url(/fonts/NBInternationalProBoo.ttf);
     font-family: Rejoice;
     src: url(/fonts/Rejouice-Headline.ttf);
+    font-family: ecoplan;
+    src: url(/fonts/ecoplan-pkbab.ttf);
+    font-family: crown;
+    src: url(/fonts/crowned-rgj38.ttf);
+    font-family: black-sterd;
+    src: url(/fonts/Blackasteroids-BF66abb087747ad.ttf);
 }
 
 /* Pacifico Font */
@@ -205,7 +211,7 @@ img{
 .home__title
 {
     width: 65%;
-    color: #d2c8c6;
+    color: #f9f1ef;
     /* border: 1px solid blue; */
     z-index: 88;
     font-weight: 800;
@@ -213,6 +219,15 @@ img{
     margin-top: 16px;
     font-family: Rejoice;
 }
+.home__title .coffee-text{
+    color: white;
+    font-family: ecoplan;
+}
+#shah{
+    background-color: blueviolet;
+}
+
+
 .home__description{
     color: #fff;
     font-size: 1rem;
