--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -90,7 +90,7 @@ img{
 /* Reusable Css Classes */
 .container{
     /* max-width: 1120px; */
-    margin-inline: 1rem;
+    /* margin-inline: 1rem; */
 
 }
 
@@ -118,12 +118,12 @@ img{
     top: 0%;
     left: 0;
     width: 100%;
-    background-color:hsl(12,32%,22%); 
+    /* background-color:hsl(12,32%,22%);  */
     z-index: 100;
     transition: background .4s, box-shadow .4s;
 }
- .header__border{
-    /* border: 1px solid  white; */
+ /* .header__border{
+    
      width: 100%;
      height: 2.5px;
      background-image:linear-gradient(90deg,hsl(12,8%,48%) 50%,transparent 50% ) ;
@@ -133,12 +133,13 @@ img{
      left: 0%;
      transition: opacity 0.3s; 
 
-} 
+}  */
 .nav{
     height:3.5rem ;
     display: flex;
     justify-content: space-around;
     align-items: center;
+    
 }
 .nav__logo{
     color: #fff;
@@ -156,8 +157,9 @@ img{
 }
 .nav__list{
     display: flex;
-    justify-content: space-between;
-    gap: 40px;
+    justify-content: space-around;
+    gap: 20px;
+    
 }
 .nav__link{
     color: #fff;
@@ -166,22 +168,19 @@ img{
     flex-direction: column;
     font-size: 10px;
     row-gap: .256rem;
+    padding: .4rem .6rem;
     transition: color .3s;
+    background-color: #ccc;
+    border-radius: 5px;
 }
-.nav__link i{
-    background: linear-gradient(180deg,hsl(39,62%,75%) 0%,hsl(39,62%,45%) 100%);
-    /* border-radius: 10px; */
-    color: transparent;
-    -webkit-background-clip: text;
-    font-size: 1.45rem;
-}
+
 .nav__link:hover{
     color:hsl(39,62%,65%) ;
 }
 
 /*  HOME STYLE */
 .home{
-    margin-top: 30px;
+    /* margin-top: 30px; */
     background: url(../images/banner.jpg);
     background-repeat: no-repeat;
     background-size: cover;
