--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -63,63 +63,72 @@ white-color:#fff;
 
 /* Base */
 
-*{
-    margin: 0;padding: 0;box-sizing: border-box;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
-html{
+
+html {
     scroll-behavior: smooth;
 
 }
-body{
+
+body {
     width: 100%;
     font-family: "Poppins";
-    font-size:.938rem ;
-    background:linear-gradient(90deg,hsl(12,32%,22%) 0%,#65463E 27% );
-    color: hsl(12,12%,32%);
+    font-size: .938rem;
+    background: linear-gradient(90deg, hsl(12, 32%, 22%) 0%, #65463E 27%);
+    color: hsl(12, 12%, 32%);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-self: center;
 }
-ul{
-   list-style: none;
+
+ul {
+    list-style: none;
 }
-a{
+
+a {
     text-decoration: none;
 }
-img{
+
+img {
     max-width: 100%;
     height: auto;
 }
 
 /* Reusable Css Classes */
-.container{
+.container {
     /* max-width: 1120px; */
     /* margin-inline: 1rem; */
 
 
 }
 
-.section{
-    padding-block:4.5rem 3.5rem;
+.section {
+    padding-block: 4.5rem 3.5rem;
     /* border: 3px solid #eee; */
 }
-.section__title{
-    color: hsl(12,12%,16%);
-    font-size:2.75rem;
+
+.section__title {
+    color: hsl(12, 12%, 16%);
+    font-size: 2.75rem;
     font-family: "Poppins";
     line-height: 120%;
     text-align: center;
     margin-bottom: 1.5rem;
 }
-.main{
+
+.main {
     overflow: hidden;
 }
 
 /* Header & Nav */
 
 .header {
-    
+
     position: fixed;
     top: 0%;
     left: 0;
@@ -128,7 +137,8 @@ img{
     z-index: 100;
     transition: background .4s, box-shadow .4s;
 }
- /* .header__border{
+
+/* .header__border{
     
      width: 100%;
      height: 2.5px;
@@ -140,21 +150,22 @@ img{
      transition: opacity 0.3s; 
 
 }  */
-.nav{
-    height:3.5rem ;
+.nav {
+    height: 3.5rem;
     display: flex;
     justify-content: space-around;
     align-items: center;
-   /* From https://css.glass */
-background: rgba(255, 255, 255, 0.09);
-border-radius: 4px;
-box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-backdrop-filter: blur(5px);
--webkit-backdrop-filter: blur(5px);
-border: none;
+    /* From https://css.glass */
+    background: rgba(255, 255, 255, 0.09);
+    border-radius: 4px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    border: none;
 
 }
-.nav__logo{
+
+.nav__logo {
     color: #fff;
     display: flex;
     align-items: center;
@@ -164,17 +175,20 @@ border: none;
     font-family: "Titillium Web";
     font-weight: bold;
 }
-.nav__logo img{
+
+.nav__logo img {
     /* width: 15%; */
     width: 28px;
 }
-.nav__list{
+
+.nav__list {
     display: flex;
     justify-content: space-around;
     gap: 20px;
-    
+
 }
-.nav__link{
+
+.nav__link {
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -186,29 +200,30 @@ border: none;
     transition: color .3s;
     background-color: #ccc;
     /* From https://css.glass */
-background: rgba(255, 255, 255, 0.39);
+    background: rgba(255, 255, 255, 0.39);
 
     border-radius: 10px;
-box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-backdrop-filter: blur(5px);
--webkit-backdrop-filter: blur(5px);
-border: 1px solid rgba(255, 255, 255, 0.3);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    border: 1px solid rgba(255, 255, 255, 0.3);
 }
 
-.nav__link:hover{
-    color:hsl(39,62%,65%) ;
+.nav__link:hover {
+    color: hsl(39, 62%, 65%);
 }
 
 /*  HOME STYLE */
-.home{
+.home {
     /* margin-top: 30px; */
-    background: url(../images/banner.jpg);
+    background: url(../images/banner.webp);
     background-repeat: no-repeat;
     background-size: cover;
-    border-bottom-left-radius:20px ;
-    border-bottom-right-radius:20px ;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
 }
-.grid{
+
+.grid {
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -220,7 +235,8 @@ border: 1px solid rgba(255, 255, 255, 0.3);
     backdrop-filter: blur(4px);
     z-index: -1;
 }
-.home__data{
+
+.home__data {
     /* border: 1px solid  skyblue; */
 
     text-align: center;
@@ -229,8 +245,8 @@ border: 1px solid rgba(255, 255, 255, 0.3);
     align-items: center;
     justify-content: center;
 }
-.home__title
-{
+
+.home__title {
     width: 65%;
     color: #f9f1ef;
     /* border: 1px solid blue; */
@@ -240,148 +256,278 @@ border: 1px solid rgba(255, 255, 255, 0.3);
     margin-top: 16px;
     font-family: Rejoice;
 }
-.home__title .coffee-text{
+
+.home__title .coffee-text {
     color: white;
     font-family: ecoplan;
 }
 
-.home__description{
+.home__description {
     color: #fff;
     font-size: 1rem;
 }
-.btn{
+
+.btn {
     color: wheat;
-    background: hsl(12,32%,22%);
+    background: hsl(12, 32%, 22%);
     padding: .5rem .8rem;
     border: 1px solid hsl(39, 46%, 23%);
     border-radius: 20px;
-    margin-top:15px;
+    margin-top: 15px;
     font-weight: 600;
     letter-spacing: 1px;
     transition: all .3s ease-in;
 }
-.btn:hover{
-    color: hsl(12,32%,22%);
-    background-color: hsl(39,62%,65%);
+
+.btn:hover {
+    color: hsl(12, 32%, 22%);
+    background-color: hsl(39, 62%, 65%);
 }
-.home__image img{
+
+.home__image img {
     margin-bottom: 2rem;
 }
+
 /* Coffee Section */
-h1{
+h1 {
     text-align: center;
-    margin:3rem 0 ;
+    margin: 3rem 0;
     color: white;
 }
-.coffee{
+
+.coffee {
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.coffee-container{
+
+.coffee-container {
     width: 65%;
     display: flex;
     justify-content: space-evenly;
-    margin: 10px;
+
     align-items: center;
     flex-wrap: wrap;
     gap: 2rem;
-
-    padding-top: 3rem ;
+    padding-top: 3rem;
     border-radius: 20%;
 }
 
-.coffee-container .coffee-cup{
+.coffee-container .coffee-cup {
     width: 190px;
     height: 200px;
     border-radius: 10px;
     margin-bottom: 50px;
     text-align: center;
-    background: linear-gradient(rgba(0,0,0,0.256),rgba(0,0,0,0.265)),url(/assets/images/addCookiee.jpeg);
+    background: linear-gradient(rgba(0, 0, 0, 0.256), rgba(0, 0, 0, 0.265)), url(/assets/images/addCookiee.jpeg);
     background-size: cover;
 }
-.coffee-cup img{
-    width: 150px;
-    height: 130px;
+
+.coffee-cup img {
+    width: 133px;
+    height: 144px;
     position: relative;
     top: -40px;
     border-radius: 50%;
-
 }
-.coffee-cup h2{
-    margin-top: -15px;
+
+
+.coffee-cup h2 {
+    margin-top: -42px;
     color: hsl(0, 0%, 100%);
 }
-.coffee-cup p{
+
+.coffee-cup p {
     font-size: 13px;
     padding: 2px;
     color: white;
 }
+
 /* About Section */
-.about{
+.about {
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    
+
 }
 
-.about-info{
+.about-info {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 2rem;
-    flex-wrap:wrap;
-    padding:2rem;
+    flex-wrap: wrap;
+    padding: 0 2rem;
 
-    
+
 }
-.about-info img{
+
+.about-info img {
     width: 300px;
     border-radius: 20px;
 }
 
-.about-info p{
+.about-info p {
     width: 40%;
     /* text-align: center; */
     color: white;
-    font-size: x-large;
+    font-size: 21px;
 }
+
 /* Cold Coffee */
-.cold-coffee{
-width: 100%;
-display: flex;
-justify-content: center;
-align-items: center;
+.cold-coffee {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
 }
-.cold-coffee-container{
+
+.cold-coffee-container {
     width: 80%;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     gap: 1.4rem;
 
-padding: 1rem;
-flex-wrap: wrap;
+    padding: 1rem;
+    flex-wrap: wrap;
 }
-.cold-cup{
-   width: 150px;
-   background-color: white;
-   padding: 10px;
+
+.cold-cup {
+    width: 150px;
+    background-color: white;
+    padding: 10px;
 }
-.cold-cup img{
-  background-color:#a67646;
+
+.cold-cup img {
+    background-color: #a67646;
 }
-.cold-cup h3{
-   font-size: normal;
-  font-weight: 600;
-  text-align: center;
+
+.cold-cup h3 {
+    font-size: normal;
+    font-weight: 600;
+    text-align: center;
+}
+
+/* Special Beans */
+
+
+.coffee {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 
+
+.beans-container {
+    width: 80%;
+    display: flex;
+    justify-content: space-evenly;
+    /* margin: 10px; */
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 1.4rem;
+    padding-top: 1rem;
+    flex-wrap: wrap;
+    padding: 16px;
+    /* border-radius: 50%; */
+}
+
+.beans-container .beans-packet {
+    width: 177px;
+    height: 189px;
+    /* border-radius: 10px; */
+    margin-bottom: 50px;
+    text-align: center;
+    background: rgba(255, 255, 255, 0.1);
+    /* background-color: transparent; */
+    border-radius: 10px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.2);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    border: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+.beans-packet img {
+    width: 99px;
+    height: 138px;
+    position: relative;
+    top: -36px;
+    /* border-radius: 50%; */
+}
+
+.beans-packet h3 {
+    margin-top: -24px;
+    color: hsl(0, 0%, 100%);
+    font-size: 15px;
+}
+.beans-packet p {
+    font-size: 13px;
+    padding: 2px;
+    color: white;
+}
+
+/* Footer Section */
+footer{
+    width: 100%;
+   
+}
+.footer-container{
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 2rem;
+    background: rgba(255, 255, 255, 0.09);
+    padding: 1rem;
+}
+
+.footer-info1{
+    color: white;
+}
+.footer-info1 {
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: start;
+    gap: 9px;
+
+}
+.footer-info1 .contact{
+    margin-bottom: 20px;
+    text-align: center;
+}
+.footer-info1 .footer__link{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    font-size: 20px;
+}
+.footer-info1 .footer__link i:nth-child(1){
+    
+    color:rgb(209, 40, 195);
+}
+.footer-info1 .footer__link i:nth-child(2){
+    
+    color:rgb(222, 222, 222);
+}
+.footer-info1 .footer__link i:nth-child(3){
+    
+    color:rgb(102, 51, 244);
+}
+.footer-info1 .footer__link i:nth-child(4){
+    
+    color:rgb(221, 32, 32);
+}
 /* change background header */
 
 /* Active Link */
