--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,20 +8,22 @@
 /* font face */
 
 @font-face {
-    font-family: matter-light;
-    src: url(/fonts/matter-light.ttf);
-    font-family: Nb;
-    src: url(/fonts/NBInternationalProBoo.ttf);
-    font-family: Rejoice;
-    src: url(/fonts/Rejouice-Headline.ttf);
     font-family: ecoplan;
     src: url(/fonts/ecoplan-pkbab.ttf);
-    font-family: crown;
-    src: url(/fonts/crowned-rgj38.ttf);
+    font-family: bouncy;
+    src: url(/fonts/Bouncy-PERSONAL_USE_ONLY.otf);
+    
+}
+@font-face {
     font-family: black-sterd;
     src: url(/fonts/Blackasteroids-BF66abb087747ad.ttf);
+  
 }
-
+@font-face {
+    font-family: algance;
+    src:url(/fonts/Algance-Regular.otf);
+    
+}
 /* Pacifico Font */
 
 /* header-height: 3.5rem 
@@ -106,11 +108,20 @@ img {
 
 
 }
+h1 {
+    text-align: center;
+    margin: 3rem 0;
+    color: white;
+    font-family: black-sterd;
+    font-family: bouncy;
+    letter-spacing: 2px;
+}
 
 .section {
     padding-block: 4.5rem 3.5rem;
     /* border: 3px solid #eee; */
 }
+
 
 .section__title {
     color: hsl(12, 12%, 16%);
@@ -238,7 +249,7 @@ img {
 
 .home__data {
     /* border: 1px solid  skyblue; */
-
+    
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -253,7 +264,7 @@ img {
     z-index: 88;
     font-weight: 800;
     font-size: 3.2rem;
-    margin-top: 16px;
+    margin-bottom: 10px;
     font-family: Rejoice;
 }
 
@@ -277,6 +288,7 @@ img {
     font-weight: 600;
     letter-spacing: 1px;
     transition: all .3s ease-in;
+    font-family: algance;
 }
 
 .btn:hover {
@@ -289,11 +301,6 @@ img {
 }
 
 /* Coffee Section */
-h1 {
-    text-align: center;
-    margin: 3rem 0;
-    color: white;
-}
 
 .coffee {
     width: 100%;
@@ -392,7 +399,6 @@ h1 {
     justify-content: space-evenly;
     align-items: center;
     gap: 1.4rem;
-
     padding: 1rem;
     flex-wrap: wrap;
 }
