--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -48,6 +48,14 @@
     flex-direction: column;
     align-items: center;
   }
+  .nav__logo img{
+    font-size: 13px;
+  }
+  .nav__logo span{
+    
+    font-size: 13px;
+  
+  }
   
 }
 @media screen and (max-width: 748px) {
@@ -55,10 +63,7 @@
     flex-direction: column;
     align-items: center;
   }
-  .about-info{
-    
-  }
- 
+  
  
 }
 
@@ -71,7 +76,7 @@
     row-gap:20px ;
   }
   .nav__item{
-    padding-left: 20px;
+    padding-left: 10px;
 
   }
   .about-info{
